[Backend] - DatasetVersion refactoring. Review issues fix